# bluray-tracker

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  FEATURES.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  TIER_1_IMPLEMENTATION.md  TMDB_ENRICHMENT_PR_PLAN.md  docker-compose.yml  docker-crontab
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  bluray-tracker
src/: main.cpp
src/application/: scheduler.cpp  scheduler.hpp
src/application/deals/: deals_service.cpp  deals_service.hpp
src/application/enrichment/: tmdb_enrichment_service.cpp  tmdb_enrichment_service.hpp
src/application/notifier/: discord_notifier.cpp  discord_notifier.hpp  email_notifier.cpp  email_notifier.hpp  notifier.hpp
src/application/scraper/: amazon_nl_scraper.cpp  amazon_nl_scraper.hpp  bluray_com_scraper.cpp  bluray_com_scraper.hpp  bol_com_scraper.cpp  bol_com_scraper.hpp  scraper.cpp  scraper.hpp
src/domain/: change_detector.hpp  deal.hpp  models.cpp  models.hpp
src/infrastructure/: config_manager.cpp  config_manager.hpp  database_manager.cpp  database_manager.hpp  image_cache.cpp  image_cache.hpp  input_validation.hpp  logger.cpp  logger.hpp  network_client.cpp  network_client.hpp  tmdb_client.cpp  tmdb_client.hpp
src/infrastructure/repositories/: collection_repository.cpp  collection_repository.hpp  deal_repository.cpp  deal_repository.hpp  price_history_repository.cpp  price_history_repository.hpp  release_calendar_repository.cpp  release_calendar_repository.hpp  tag_repository.cpp  tag_repository.hpp  wishlist_repository.cpp  wishlist_repository.hpp
src/presentation/: html_renderer.cpp  html_renderer.hpp  web_frontend.cpp  web_frontend.hpp
